--- a/sample-service-parent/sample-service/src/main/resources/application.yml
+++ b/sample-service-parent/sample-service/src/main/resources/application.yml
@@ -19,9 +19,9 @@ server:
     context-path: /rest
 
 mongodb:
-  connectionString: mongodb+srv://cluster0admin:ZKyfj4bziDEZ0qkC@cluster0.oizco.mongodb.net/
+  connectionString: mongodb+srv://cluster0admin:xxxxxxxx@cluster0.oizco.mongodb.net/
   user: cluster0admin
-  password: ZKyfj4bziDEZ0qkC
+  password: xxxxxxxx
   authSource: admin
   replicaSet: atlas-j2d8vq-shard-0
   batchSize: 100
