--- a/sample-service-parent/sample-service/pom.xml
+++ b/sample-service-parent/sample-service/pom.xml
@@ -93,6 +93,13 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.32</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
